Emit wrapped response fromuse case and endpoints
